--- a/main_frontend/concert1/app/assets/css/main.css
+++ b/main_frontend/concert1/app/assets/css/main.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+@tailwind base;
+
+@tailwind utilities;
+
+@layer base {
+  input[type="password"]::-ms-reveal,
+  input[type="password"]::-ms-clear {
+    display: none;
+  }
+}
